fix preview when etext not available (#1039)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -359,7 +359,8 @@
       "tmp:BDRCworkId":"Work Page",
       "bdr:PartTypeCodicologicalVolume": "Codicological volume",
       "tmp:topic": "Is About",
-      "tmp:by":" | by: "
+      "tmp:by":" | by: ",
+      "tmp:notAvailableYet":"Not available yet"
    },
    "guided":{
       "keyword":"keyword",
