fix home header (en/bo)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -21,7 +21,7 @@
       "titleBDRC3": "Center",
       "archives1": "The Buddhist",
       "archives2": "Digital Archives",
-      "by": "by the Buddhist Digital Resource Center",
+      "by": "by Buddhist Digital Resource Center",
       "subtitle": "A cooperative platform for expanding access to Buddhist literature. Explore the millions of pages of texts contributed by BDRC and its many partners.",
       "message": "WELCOME TO BUDA, BDRC's NEW LIBRARY!",
       "submessage": "with new features, resources, and tools for faster and more in-depth research.",
