screenshots/updates + minor fixes (#1058)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -803,6 +803,7 @@
       "closeO":"Close outline",
       "downloadFU": "Download Preview",
       "findT":"Find Texts Related to this {{type}}",
+      "findTP":"Find Material Related to this {{type}}",
       "findTbyP":"Find texts created by this person",
       "findTaboutT":"Find texts about this topic",
       "findTrecent":"Find Texts in the Recent Acquisitions",
