--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -21,7 +21,7 @@
       "titleBDRC3": "中心",
       "archives1": "佛教",
       "archives2": "数字档案馆",
-      "by": "",
+      "by": "由佛教数字资源中心提供",
       "subtitle": "这是一个令佛教文献触手可及的合作平台。请在此探索由BDRC及其合作伙伴们提供的千万页文本吧。",
       "message": "欢迎来到佛教数字资源中心（BDRC）新图书馆的测试版！",
       "submessage": "新功能，新资源，新工具，促进更高效的研究",
@@ -736,7 +736,7 @@
       "scanF": "扫描件属于",
       "etextF": "电子档属于",
       "openR": "开放记录",
-      "loadP": "Load previous pages",
+      "loadP": "加载前面几页",
       "sameL": "外部资源链接",
       "sameL_plural": "Links to External Resources",
       "gener1pdf": "生成PDF",
